# messenger

./: Makefile  README.md  pyproject.toml  server.py  setup.cfg
.github/workflows/: tests.yml
client/: test_client.py
messenger/: server.py  user.py
messenger/client/: chats_menu.py  client.py  dialog.py  login.py  mainmenu.py  network.py  register.py  sql.py  support.py  test_client.py
messenger/common/: messages.py  responses.py  user.py
messenger/server/: messages.py  server.py  sql.py
server/: server.py
